--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ jdk:
   - oraclejdk8
 sudo: true
 
-install:
-  - curl -sLo - http://j.mp/install-travis-docker | sh -xe
+services:
+  - docker
+
 
 script: sudo mvn clean package docker:build
 
